src/assets/sass/main.css
@media (max-width: 991px) {
    /* blog */
    .main-blog-article-content .blog-content {
        background-color: #f4f5f6 !important;
    }
    .main-blog-article-content .article .title-blog {
        background-color: #fff;
        padding-top: 2rem !important;
    }
    .share {
        bottom: 2rem;
    }
    .comments-section {
        background-color: #f4f5f6 !important;
    }
    activity-mobile {
        text-align: center;
    }
    .article .article-img {
        margin-bottom: 0;
    }
    .my-spots-section .share {
        bottom: 1.5rem;
    }
    .article-wrapper, .article-wrap {
        margin-bottom: 4rem;
    }
    .album-container .img-wrap .album-tools-wrap {
        display: block;
        position: absolute;
    }
    .photo-wrap .photo .album-tools-wrap {
        display: flex;
        margin-bottom: -34px;
        flex-direction: row;
        -webkit-justify-content: flex-end;
        justify-content: flex-end;
        z-index: 2;
    }
    .photo-wrap .photo {
        min-height: 120px;
    }
    .search-img {
        margin-bottom: 2rem;
    }
    header {
        padding: 0;
    }
    header nav {
        float: left;
    }
    header nav .menu-btn {
        float: left;
    }
    header .logo {
        width: 160px;
        float: right;
        height: initial;
    }
    header .logo-mini {
        text-align: center;
    }
    .information-profile {
        text-align: center;
    }
    .information-profile .info-links a {
        display: inline-block;
        float: none;
    }
    .tools-wrap .tools-hint-block ul li .path-map, .tools-wrap .tools-hint-block ul li .radius-map, .tools-wrap .tools-hint-block ul li .lasso-map {
        display: none !important;
    }
    .add-friend {
        top: 2.8rem;
    }
    .spot-thumb figure {
        width: 10rem !important;
        height: 10rem !important;
    }
    /*.tools li a {
      width: 16px;
      overflow: hidden;
      display: block;
      height: 16px;
    } */
    .tools li a {
        overflow: hidden;
        background-image: none !important;
        padding-left: 0;
        color: #00c9f8 !important;
        font-size: 12px;
    }
    .my-spots-section .share {
        bottom: 0.5rem !important;
    }
    .menu-profile ul li a span {
        display: none;
    }
    .menu-profile ul {
        text-align: center;
        display: flex;
        justify-content: space-between;
        margin-left: 0;
    }
    .menu-profile ul li {
        float: none;
        height: 15px;
    }
    .album-container .img-wrap .album-tools-wrap, .album-container .img-wrap:hover .album-tools-wrap {
        bottom: 5px !important;
        margin-bottom: 0;
        z-index: 2;
    }
    .album-title .title-width {
        width: calc(100% - 100px);
        text-align: left;
    }
    .photos li .delete {
        display: block;
    }
    .avatar-block .bg-thumb {
        margin-right: 0;
    }
}

@media (max-width: 991px) and (min-width: 767px) {
    .information-profile .avatar-wrap .avatar {
        width: 10rem;
        height: 10rem;
    }
    .sort-menu {
        width: 100%;
    }
    .sort-menu .hide-wrap .close-popup {
        width: 100%;
    }
    .tools-hint-block a.hide {
        padding: 8px;
        background-size: 95% !important;
    }
    .tools-wrap {
        width: 80%;
    }
    .weather-wrap {
        width: 100%;
    }
    .leaflet-left {
        left: 0 !important;
    }
    .module-sidebar .img-responsive, .module-sidebar .row-min .pad-min > a {
        height: auto !important;
    }
    .search-filters .country-filter + .filters-button {
        left: 83.8%;
    }
    .search-filters {
        padding-left: 15%;
    }
}
/* ... */

